# ConnectX

./: .gitignore  README.md  pyproject.toml  requirements.txt
connectx/: __init__.py
connectx/agents/: __init__.py  dqn.py  lookahead.py  ppo_selfplay.py  q_learning.py  reward_shaping.py  utils.py
results/: PIPELINE_STATUS.md  algorithms_manifest.json  algorithms_summary.csv  algorithms_summary.json  arena_summary.csv  negamax_final_comparison.csv  perfect_move_rate_gen8_vs_682.json  solver_diagnosis.md  validate_cached.md  validate_hybrid.md  win_rate_matrix.json  win_rate_matrix.txt
scripts/: diagnose_solver.py  monitor_push.sh  run_overnight_pipeline.sh  status.sh  status_push.sh  status_shaped.sh  train_alphazero_push.sh  train_alphazero_shaped.sh  train_overnight.sh  train_sequential.sh  train_shaped.sh  validate_cached.py  validate_hybrid.py  validate_solver_submission.py  validate_solver_v2.py  validate_submission.py  wait_and_export_all.sh  wait_ppo_then_alphazero_shaped.sh  wait_then_alphazero_push.sh  watchdog.sh  watchdog_push.sh
submission/: submission.py  submission_alphazero_gen8_cached.py  submission_alphazero_hybrid_gen8.py  submission_alphazero_rollback_gen8.py  submission_alphazero_solver_gen8.py  submission_alphazero_solver_gen8_v2.py  submission_dqn.py  submission_kind.txt  submission_notes.txt  submission_ppo.py  submission_q_learning.py  submission_registry.json  submissions_manifest.json
tests/: test_alphazero_training.py  test_arena.py  test_connectx_env.py  test_lookahead.py  test_q_learning.py  test_reward_shaping.py  test_submission.py
(+37 files in other folders)
