[project]
name = "connectx-rl"
version = "0.1.0"
description = "Kaggle ConnectX reinforcement-learning agents and evaluation tools."
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
kaggle = [
    "kaggle-environments>=1.15",
]
train = [
    "torch>=2.2",
    "stable-baselines3>=2.3",
    "sb3-contrib>=2.3",
]
report = [
    "matplotlib>=3.8",
    "pandas>=2.0",
    "seaborn>=0.13",
]
all = [
    "pytest>=8",
    "kaggle-environments>=1.15",
    "torch>=2.2",
    "stable-baselines3>=2.3",
    "sb3-contrib>=2.3",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "seaborn>=0.13",
]

[tool.setuptools.packages.find]
include = ["connectx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
